# Browser-Use-Action-Compression

./: .env.example  .gitignore  README.md  TRACE_FORMAT.md  bpe_macro_tokenizer.py  llm_macros.py  macro_mining.md  pyproject.toml  sample_traces.json
awo_browser_traces/: google_flights_48_p009.costs.json  google_flights_48_p009.json  yelp_search_50_p008.costs.json  yelp_search_50_p008.json
awo_browser_traces_old/: google_flights_48_p009.costs.json  google_flights_48_p009.json  yelp_search_50_p006.costs.json  yelp_search_50_p006.json
browser_traces/amazon_single_item_purchase_2_p001/run_001/001/: task.json  trace.json
browser_traces/amazon_single_item_purchase_2_p001/run_001/002/: task.json  trace.json
cost_analysis/: README.md
macros/amazon_single_item_purchase_30_p004_run_001/: bpe_merges.json  bpe_tokenizer_macros.json  summary.md
prompt_datasets/: amazon_single_item_purchase_2_p001.json  amazon_single_item_purchase_2_p002.json  amazon_single_item_purchase_2_p003.json  amazon_single_item_purchase_30_p004.json  google_flights_48_p009.json  google_flights_48_p011.json  yelp_search_50_p005.json  yelp_search_50_p006.json  yelp_search_50_p007.json  yelp_search_50_p008.json
scripts/: awo_capture_session.py  awo_trace_generation.py  generate_cost_analysis_figures.py  generate_cost_analysis_pngs.py  generate_prompts.py  run_browser_use.py
src/browser_use_lab/: __init__.py  awo_trace_generation.py  browser_runner.py  ids.py  io_utils.py  prompt_generator.py  trace_format.py
src/browser_use_trace_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+72 files in other folders)
